add crud example
